# Falcon9_Electric_Fun

./: README.md
Avionics/: README.md
Branding/: Falcon9_cut_preview.3dm  Falcon9_cut_preview.dxf  logo_pixel.dxf
ESC_BLDC_motor_test/ESC_BLDC_motor_test/: ESC_BLDC_motor_test.ino
Vision_Control/: CMakeLists.txt  README.md  pixelcamp.cpp  resetusb.sh
Vision_Control/3d_models/: pixelscamp_rocket.stl
Vision_Control/falcon9/: AbsoluteObjectKF.cpp  AbsoluteObjectKF.h  CMakeLists.txt  ClippedRamp.cpp  ClippedRamp.h  PID.cpp  PID.h  SlidingWindow.cpp  SlidingWindow.h  pclviewer.cpp  pclviewer.h  pclviewer.ui
Vision_Control/include/: k2g.h
